fixed spacing on contact info again

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -401,7 +401,7 @@ nav ul li:nth-child(1) {
 @media screen and (min-width: 500px) {
   .contactInfo {
     flex-direction: row;
-    span:nth-child(2) {
+    a:nth-child(2) {
       margin-left: 20px;
     }
   }
